--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
     <javaee-web-api.version>7.0</javaee-web-api.version>
     <jstl.version>1.2</jstl.version>
+    <commons-codec.version>1.10</commons-codec.version>
     <gson.version>2.3.1</gson.version>
     <mysql-connector-java.version>5.1.6</mysql-connector-java.version>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
@@ -67,6 +68,12 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate-core.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>${commons-codec.version}</version>
     </dependency>
 
     <dependency>
