--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/task_manager
+jdbc.databaseurl=jdbc:mysql://localhost:3306/task_manager?useUnicode=true&amp;characterEncoding=UTF8&amp;character_set_client=UTF8&amp;character_set_database=UTF8&amp;character_set_results=UTF8&amp;character_set_server=UTF8&amp;character_set_system=UTF8
 jdbc.username=root
 jdbc.password=root
